# ndsquared

./: .gitignore  .tool-versions  Makefile  README.md  Tiltfile  gitlab-secret.example.yaml
.github/workflows/: api-cd.yaml  api-ci.yaml  goapi-cd.yaml  goapi-ci.yaml  helm-cd.yaml  helm-ci.yaml  portfolio-cd.yaml  portfolio-ci.yaml  sealed-cd.yaml  wedding-cd.yaml  wedding-ci.yaml
apps/api/: .pylintrc  Dockerfile  Makefile  connectfour.py  main.py  pyproject.toml
apps/api/app/: connectfour.py  main.py
apps/api/tests/: conftest.py  test_main.py
apps/goapi/: Dockerfile  Makefile  go.mod  go.sum  tilt.dockerfile
apps/goapi/docs/: docs.go
apps/goapi/src/: board.go  connectfour.go  connectfour_test.go  main.go  solver.go  solvers.go  solvers_test.go
apps/portfolio/: Dockerfile  package-lock.json  package.json  secure.dockerfile  svelte.config.js  tsconfig.json
apps/portfolio/src/: app.html
apps/wedding/: Makefile  README.md  package-lock.json  svelte.config.js  tailwind.config.cjs
apps/wedding/src/: app.html
helm/: api-secret-local.yaml  values.api.local.yaml  values.common.local.yaml  values.goapi.local.yaml  values.portfolio.local.yaml  values.wedding.local.yaml
helm/api/: Chart.yaml  values.yaml
helm/api/templates/: _helpers.tpl  deployment.yaml  external_secret.yaml  (+5 more)
helm/goapi/: Chart.yaml  values.yaml
helm/portfolio/: Chart.yaml  values.yaml
helm/wedding/: Chart.yaml  values.yaml
sealed/local/: api-sealed.yaml  key.yaml  portfolio-sealed.yaml
sealed/prod/: api-sealed.yaml  portfolio-sealed.yaml
tilt_modules/: extensions.json
(+44 files in other folders)
