[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Daniel Longeuay <dannylongeuay@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
dramatiq = {extras = ["redis", "watch"], version = "^1.12.1"}
fastapi-auth0 = "^0.3.0"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
